Added index with photo link from Linkedin

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="images\simao_profile.jpg" alt="Simão Profile Picture"></td>
+      <td><img src="https://media-exp1.licdn.com/dms/image/C4E03AQGXsrnhMWXhBA/profile-displayphoto-shrink_400_400/0/1624614215837?e=1643241600&v=beta&t=rsOlS62VySVtgaeIdR66AtzmIVRu6VVKJvc2_xE513Y" alt="Simão Profile Picture"></td>
       <td><h1> Simão Martins </h1>
       <p><em><a href="https://www.team-it.pt/#teamit">Manager</a> and <b>Father of Two</b></em></p>
       <p>Self-motivated professional, detail-oriented and focused on a teamwork driven environment.</p></td>
